--- a/application/modules/customer/views/scripts/task/new-task.phtml
+++ b/application/modules/customer/views/scripts/task/new-task.phtml
@@ -127,7 +127,7 @@
                     
                         <span>
                         <input type="checkbox" name="docs" value="1" id="docs" class="form-control" >
-                        Исполнитель обязан иметь при себе расписку</span>
+                        Исполнитель должен иметь при себе документы для оформления расписки</span>
                     
                 </div>
                 <input type="hidden" name="agree"  value="0">
@@ -137,7 +137,7 @@
                    
                       <span>  
                    <input type="checkbox" name="agree" value="1" id="agree" class="form-control" >
-                         Я согласен/а с <a id="serviceAgreement">требованиями и правилами</a> данного сервиса
+                         Я согласен/на с <a id="serviceAgreement" style="color: #4EC67F">условиями использования</a> данного сервиса
                     </span>
                    <p id="agree_error" class="text-danger" style="display: none">* Согласитесь с условиями</p>
                 </div>
