--- a/application/modules/default/views/scripts/index/index.phtml
+++ b/application/modules/default/views/scripts/index/index.phtml
@@ -73,8 +73,8 @@ $(document).ready(function(){
   <div class="row subCategoryList clearfix">
     <?php foreach($this->mainCats as $cat){?>
     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6  text-center">
-      <div class="thumbnail equalheight" style="height: 133px;">
-          <a class="subCategoryThumb" href="#" data-toggle="modal" data-target="#ModalLogin" >
+      <div class="thumbnail equalheight" style="height: 190px;">
+          <a class="subCategoryThumb" href="#" data-toggle="modal" data-target="#ModalLogin" style="height:150px; padding-top: 10px">
               <img src="<?= $this->baseUrl().'/images/category_images/'.$cat['image'] ?>" class="img-rounded " alt="img">
           </a>
           <a class="subCategoryTitle" data-toggle="modal" data-target="#ModalLogin" >
