--- a/application/modules/default/views/scripts/tasks/index.phtml
+++ b/application/modules/default/views/scripts/tasks/index.phtml
@@ -15,7 +15,14 @@
 <!--        <p class="pull-left"> Showing <strong>12</strong> products </p>-->
         <div class="pull-right ">
 
-          <div class="change-view pull-right"> <a href="#" title="Grid" class="grid-view"> <i class="fa fa-th-large"></i> </a> <a href="#" title="List" class="list-view "><i class="fa fa-th-list"></i></a> </div>
+          <div class="change-view pull-right"> 
+              <a href="#" title="Grid" class="grid-view">
+                  <i class="fa fa-th-large"></i
+              </a>
+              <a href="#" title="List" id="listView" class="list-view ">
+                  <i class="fa fa-th-list"></i>
+              </a> 
+          </div>
         </div>
       </div>
       <!--/.productFilter-->
