--- a/application/modules/performer/views/scripts/index/index.phtml
+++ b/application/modules/performer/views/scripts/index/index.phtml
@@ -17,7 +17,9 @@ $(document).ready(function(){
 
 });
   </script>
-<div class="banner" style="margin-top: -3% !important">
+
+
+<div class="banner" style="margin-top: -5% !important">
   <div class="full-container">
     <div class="slider-content">
       <ul id="pager2" class="container">
@@ -48,7 +50,7 @@ $(document).ready(function(){
                       Прямо сейчас
                   </h3>
                   
-                  <a href="<?= $this->baseUrl().'/performer/task/add/' ?>" class="btn btn-primary btn-lg">
+                  <a data-toggle="modal"  data-dismiss="modal" href="#ModalLogin"class="btn btn-primary btn-lg">
                       Заказать услугу
                       <span class="arrowUnicode">►</span>
                   </a> 
@@ -68,7 +70,22 @@ $(document).ready(function(){
 </div>
 
 <div class="container main-container"> 
-  
+  <div class="row subCategoryList clearfix">
+    <?php foreach($this->mainCats as $cat){?>
+    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6  text-center">
+      <div class="thumbnail equalheight" style="height: 190px;">
+          <a class="subCategoryThumb" href="#" data-toggle="modal" data-target="#ModalLogin" style="height:150px; padding-top: 10px">
+              <img src="<?= $this->baseUrl().'/images/category_images/'.$cat['image'] ?>" class="img-rounded " alt="img">
+          </a>
+          <a class="subCategoryTitle" data-toggle="modal" data-target="#ModalLogin" >
+              <span><?= $cat['title'] ?></span>
+          </a>
+      </div>
+    </div>
+    <?php } ?>
+</div>
+</div>
+
   <!-- Main component call to action -->
   
   <div class="morePost row featuredPostContainer style2 globalPaddingTop ">
@@ -85,7 +102,7 @@ $(document).ready(function(){
              <div class="quickview">
               
              </div>
-                <a href="#">
+                <a href="#" data-toggle="modal" data-target="#ModalLogin" >
                  <?php if($lastTask['task_image']){?>   
                     <img src="<?= $this->baseUrl().'/images/task_images/'.$lastTask['task_image'] ?>" alt="img" class="img-responsive">
                  <?php }else{ ?>
@@ -95,12 +112,12 @@ $(document).ready(function(){
 <!--              <div class="promotion"> <span class="new-product"> NEW</span> </div>-->
             </div>
             <div class="description">
-              <h4><a href="#"  ><?= $lastTask['title'] ?></a></h4>
+              <h4><a href="#" data-toggle="modal" data-target="#ModalLogin" ><?= $lastTask['title'] ?></a></h4>
               <p><?= $lastTask['description']?> </p>
 <!--              <span class="size">XL / XXL / S </span> -->
             </div>
             <div class="price"> <span><?= $lastTask['price'] ?> .руб</span> </div>
-<!--            <div class="action-control"> <a href="#" > <span class="add2cart"> Подробнее </span> </a> </div>-->
+            <div class="action-control"> <a class="btn btn-primary" data-toggle="modal" data-target="#ModalLogin" > <span class="add2cart"> Подробнее </span> </a> </div>
           </div>
         </div>
        <?php }?>
@@ -117,21 +134,8 @@ $(document).ready(function(){
   </div>
   <!--/.featuredPostContainer-->
   
-  <hr class="no-margin-top">
-<div class="row subCategoryList clearfix">
-    <?php foreach($this->mainCats as $cat){?>
-    <div class="col-lg-2 col-md-2 col-sm-3 col-xs-4  text-center">
-      <div class="thumbnail equalheight" style="height: 133px;">
-          <a class="subCategoryThumb" href="#" data-toggle="modal" data-target="#ModalLogin" >
-              <img src="<?= $this->baseUrl().'/images/category_images/'.$cat['image'] ?>" class="img-rounded " alt="img">
-          </a>
-          <a class="subCategoryTitle" data-toggle="modal" data-target="#ModalLogin" >
-              <span><?= $cat['title'] ?></span>
-          </a>
-      </div>
-    </div>
-    <?php } ?>
-</div>
+
+
   <!--/.section-block-->
   
  
