--- a/application/modules/performer/views/scripts/index/tasks.phtml
+++ b/application/modules/performer/views/scripts/index/tasks.phtml
@@ -41,7 +41,7 @@
           <div class="change-view pull-right">
               <a href="#" title="Grid" class="grid-view">
                   <i class="fa fa-th-large"></i> </a>
-              <a href="#" title="List" class="list-view ">
+              <a href="#" title="List" id="listView" class="list-view ">
                   <i class="fa fa-th-list"></i>
               </a> 
           </div>
