--- a/application/modules/performer/views/scripts/performers/performer-view.phtml
+++ b/application/modules/performer/views/scripts/performers/performer-view.phtml
@@ -1,14 +1,13 @@
-<?php if($this->performer['role'] == 'performer'){?>
+<?php if($this->performer['role'] == 'performer'){ ?>
   <div class="row">
     <div class="breadcrumbDiv col-lg-12">
       <ul class="breadcrumb">
-          <li> <a href="<?= $this->baseUrl().'/customer/' ?>">Главная</a> </li>
-          <li> <a href="<?= $this->baseUrl().'/customer/performers/' ?>">Список исполнителей</a> </li>
-        <li class="active"><?= $this->performer['username'].' '.mb_substr($this->performer['surname'], 0, 1, 'utf-8').'.' ?> </li>
+          <li> <a href="<?= $this->baseUrl().'/performer/' ?>">Главная</a> </li>
+          <li> <a href="<?= $this->baseUrl().'/performer/user/' ?>">Личный кабинет</a> </li>
+        <li class="active"><?= $this->performer['username'].' '.$this->performer['surname'] ?> </li>
       </ul>
     </div>
   </div>
-
   <div class="row transitionfx"> 
     
     <!-- left column -->
@@ -27,34 +26,25 @@
     
     <!-- right column -->
     <div class="col-lg-6 col-md-6 col-sm-5">
-      <h1 class="product-title"><?= $this->performer['username'].' '.mb_substr($this->performer['surname'], 0, 1, 'utf-8').'.' ?></h1>
+      <h1 class="product-title"><?= $this->performer['username'].' '.$this->performer['surname'] ?></h1>
       <?php $sec = time()-$this->performer['birth_date'];
             $age = $sec/31556926;
             $age = floor($age);
       ?>
       <h3 class="product-code">Возраст : <?= $age; ?> лет</h3>
-          <div class="product-price"> 
-          <span class="price-sales">
-              Создано задач:  <?php $customersTasksAmount = count($this->customersTasks); ?>
-              <?= $customersTasksAmount; ?>
-          </span>  
-      </div>
-      <div class="product-price"> 
-          <span class="price-sales">
-                <?php
-                if($this->closedTasks){
-                   $closedTasksAmount = count($this->closedTasks);
-
-                ?>
-                <?php if($closedTasksAmount){ ?>
-                     Выполненных работ: <?= $closedTasksAmount ?>
-                <?php }else{ ?>
-                     Пользователь еще не завершил ни одного задания
-                <?php } 
-                } ?>
-          </span>  
-      </div>
-
+      <?php
+      if($this->closedTasks){
+         $closedTasksAmount = count($this->closedTasks);
+      
+      ?>
+      <?php if($closedTasksAmount){ ?>
+        <h3 class="product-code"> Выполненных работ: <span class="price-sales"><?= $closedTasksAmount ?></span> </h3>
+      <?php }else{ ?>
+        <h3 class="product-code"> Пользователь еще не завершил ни одного задания</h3>
+      <?php
+      } 
+      }
+      ?>
       <div class="details-description">
           <h3 class="product-code">Сферы деятельности :</h3>
           
@@ -63,10 +53,9 @@
               <?php } ?>
           
       </div>
-      <>
-      <?php if($this->closedTasks){ ?>
+      <?php if($closedTasksAmount){ ?>
       <div class="color-details"> <span class="selected-color"><strong>Рейтинг</strong></span>
-                <ul class="swatches Color">
+                       <ul class="swatches Color">
           <?php switch ($this->rating){
               case 1:?>
             <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
@@ -141,7 +130,8 @@
       <!--/.product-share--> 
       
     </div>
-    <div class="col-lg-12" style="padding-bottom: 10px">
+    <!--/ right column end --> 
+<div class="col-lg-12" style="padding-bottom: 10px">
         <h3 class="block-title-3">
                 Дополнительная информация  
         </h3>
@@ -224,13 +214,12 @@
             <?=  $this->paginationControl($this->feedbacks, 'Sliding', 'pagination.phtml') ?>
         </div>
   </div>
-<?php }else{ ?>
-<div class="row">
-    <h2>Просмотр недоступен</h2>
-</div>
-<?php }?>
   <!--/.row-->
 
   <!--/.recommended-->
-  
+ <?php }else{?>
+<div class="row">
+    <h2>Просмотр недоступен</h2>
+</div>
+<?php } ?> 
   <div style="clear:both"></div></br>
