--- a/application/modules/performer/views/scripts/task/add.phtml
+++ b/application/modules/performer/views/scripts/task/add.phtml
@@ -123,7 +123,7 @@
                     <label>Изображение</label>
                     <input type="file" name="image" class="form-control" style="width: 100%">
                     </div>
-                    <a href="javascript:addInput()">+ Добавить изображение</a>
+<!--                    <a href="javascript:addInput()">+ Добавить изображение</a>-->
                 </div>
                 <input type="hidden" value="0" name="docs" style="display: none">
                 <div class="col-sm-4">
@@ -131,7 +131,7 @@
                     
                         <span>
                         <input type="checkbox" name="docs" value="1" id="docs" class="form-control" >
-                        Исполнитель обязан иметь при себе расписку</span>
+                        Исполнитель должен иметь при себе документы для оформления расписки</span>
                     
                 </div>
                 <input type="hidden" name="agree"  value="0">
@@ -141,7 +141,8 @@
                    
                       <span>  
                    <input type="checkbox" name="agree" value="1" id="agree" class="form-control" >
-                         Я согласен/а с <a id="serviceAgreement">требованиями и правилами</a> данного сервиса
+                    Я согласен/на с <a id="serviceAgreement" style="color: #4EC67F">условиями использования</a> данного сервиса
+                         
                     </span>
                    <p id="agree_error" class="text-danger" style="display: none">* Согласитесь с условиями</p>
                 </div>
