--- a/application/modules/performer/views/scripts/task/view.phtml
+++ b/application/modules/performer/views/scripts/task/view.phtml
@@ -127,7 +127,7 @@ if (hs.addSlideshow) hs.addSlideshow({
         </div>
         <div class="col-lg-12">
            <label>Дата исполнения : </label>
-           <?= date("d.m.Y",$this->task['final_date']) ?>
+           <?= date(" h:00 d.m.Y",$this->task['final_date']) ?>
         </div>
 
         <div class="col-lg-12">
