--- a/application/modules/customer/views/scripts/performers/index.phtml
+++ b/application/modules/customer/views/scripts/performers/index.phtml
@@ -45,10 +45,10 @@
                 <div class="description">
                     <?php  
                         $tasksObj = new Performer_Model_DbTable_TasksModel();
-                        $tasksAmount = count($tasksObj->getPerformersTasks($performer['id']));
+                        $tasksAmount = count($tasksObj->getPerformersTasks($performer['u_id']));
                         if($tasksAmount > 0){
                             $feedbackObj = new Performer_Model_DbTable_FeedbackModel();
-                            $rating = $feedbackObj->countPerformersRating($performer['id']);       
+                            $rating = $feedbackObj->countPerformersRating($performer['u_id']);       
                     ?>
                     <ul class="swatches Color">
                     <?php switch ($rating){
