--- a/application/modules/customer/views/scripts/task/view.phtml
+++ b/application/modules/customer/views/scripts/task/view.phtml
@@ -69,7 +69,24 @@ if (hs.addSlideshow) hs.addSlideshow({
         <?php break; ?>
         <?php }?>
     </div>
+
 </div>
+    <?php if($this->addImagesssssss){?>
+    <div class="col-lg-12 padding-bottom" >
+        <div class="product-share clearfix">
+            <p> Дополнительные изображения</p>
+            <div class=""> 
+            <?php foreach($this->addImages as $image){?>
+                <div class="col-lg-4">
+                    <a href="<?= $this->baseUrl().'/images/task_images/'.$image ?>" class="highslide" onclick="return hs.expand(this)">
+                        <img src="<?= $this->baseUrl().'/images/task_images/'.$image ?>" class="img-thumbnail" width="200px">
+                    </a>
+                </div>
+            <?php } ?>
+            </div>
+        </div>
+        </div>
+    <?php } ?>
 <div role="tabpanel" >
 
   <!-- Nav tabs -->
@@ -108,7 +125,7 @@ if (hs.addSlideshow) hs.addSlideshow({
         </div>
         <div class="col-lg-12">
            <label>Дата исполнения : </label>
-           <?= date("d.m.Y",$this->task['final_date']) ?>
+           <?= date("h:00 d.m.Y",$this->task['final_date']) ?>
         </div>
 
         <div class="col-lg-12">
