--- a/application/modules/default/views/scripts/index/index.phtml
+++ b/application/modules/default/views/scripts/index/index.phtml
@@ -95,14 +95,14 @@ $(document).ready(function(){
           
        <?php foreach($this->lastTasks as $lastTask){?>
         <!--/.item-->
-        <div class="item col-lg-3 col-md-3 col-sm-4 col-xs-6">
+        <div class="item col-lg-3 col-md-3 col-sm-4 col-xs-6 list-view">
           <div class="product">
          
             <div class="image">  
              <div class="quickview">
               
              </div>
-                <a href="#" data-toggle="modal" data-target="#ModalLogin" >
+                <a href="#" data-toggle="modal" data-target="#ModalLogin"  >
                  <?php if($lastTask['task_image']){?>   
                     <img src="<?= $this->baseUrl().'/images/task_images/'.$lastTask['task_image'] ?>" alt="img" class="img-responsive">
                  <?php }else{ ?>
