--- a/application/modules/default/views/scripts/performers/view.phtml
+++ b/application/modules/default/views/scripts/performers/view.phtml
@@ -67,49 +67,49 @@
         <ul class="swatches Color">
           <?php switch ($this->rating){
               case 1:?>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
           <?php break;
               case 2:
       ?>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
         <?php
         break;
         case 3: ?>  
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
         <?php break;
               case 4:
-    ?>      <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
+    ?>      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
           <?php break;
               case 5:
-    ?>      <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
+    ?>      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+             <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
           <?php 
           break;
           default: ?>
-          <li > <a style="background-color:#adadad"> </a> </li>
-          <li > <a style="background-color:#adadad"> </a> </li>
-          <li > <a style="background-color:#adadad"> </a> </li>
-          <li > <a style="background-color:#adadad"> </a> </li>
-          <li > <a style="background-color:#adadad"> </a> </li>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
           <?php }?>
         </ul>
       </div>
@@ -139,6 +139,14 @@
       <!--/.product-share--> 
       
     </div>
+   <?php if($this->performer['about']){?>
+    <div class="col-lg-12" style="padding-bottom: 10px">
+        <h3 class="block-title-3">
+                Дополнительная информация  
+        </h3>
+        <p><?= $this->performer['about'] ?></p>
+    </div>
+    <?php } ?>   
     <!--/ right column end --> 
         <div class="col-lg-12" style="padding-bottom: 10px">
             <h3 class="block-title-3">
