--- a/application/modules/default/views/scripts/tasks/index.phtml
+++ b/application/modules/default/views/scripts/tasks/index.phtml
@@ -30,21 +30,21 @@
 
         <!--/.item-->
         <?php foreach($this->paginator as $task){?>
-        <div class="item col-sm-4 col-lg-4 col-md-4 col-xs-6">
+        <div class="item col-sm-4 col-lg-4 col-md-4 col-xs-6 list-view">
           <div class="product">
             <div class="image">  
-                <a href="#" data-toggle="modal" data-target="#ModalLogin">
+                <a href="#" data-toggle="modal" data-target="#ModalLogin" style="max-height: 170px !important;" >
                     <img src="<?= $this->baseUrl() ?>/images/task_images/<?= $task['task_image'] ?>" alt="img" class="img-responsive"></a>
 <!--                <div class="promotion"> <span class="new-product"> NEW</span> </div>-->
             </div>
             <div class="description">
               <h4><a href="#" data-toggle="modal" data-target="#ModalLogin"><?= $task['title'] ?></a></h4>
+              <small>Дата исполнения: <?= date("h:00 d.m.y",$task['final_date']) ?></small></br>
+                    <small>Предложение действительно до: <?= date("h:00 d.m.y",$task['expiry_date']) ?></small>
               <div class="grid-description">
                 <p><?= $task['description'] ?></p>
               </div>
-              <div class="list-description">
-                <p><?= $task['description'] ?></p>
-              </div>
+              
               
             </div>
             <div class="price"> <span><?= $task['customers_price'] ?> .руб</span> </div>
