--- a/application/modules/performer/views/scripts/index/index.phtml
+++ b/application/modules/performer/views/scripts/index/index.phtml
@@ -50,7 +50,7 @@ $(document).ready(function(){
                       Прямо сейчас
                   </h3>
                   
-                  <a data-toggle="modal"  data-dismiss="modal" href="#ModalLogin"class="btn btn-primary btn-lg">
+                  <a href="<?= $this->baseUrl().'/performer/task/add' ?>" class="btn btn-primary btn-lg">
                       Заказать услугу
                       <span class="arrowUnicode">►</span>
                   </a> 
@@ -74,10 +74,10 @@ $(document).ready(function(){
     <?php foreach($this->mainCats as $cat){?>
     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6  text-center">
       <div class="thumbnail equalheight" style="height: 190px;">
-          <a class="subCategoryThumb" href="#" data-toggle="modal" data-target="#ModalLogin" style="height:150px; padding-top: 10px">
+          <a class="subCategoryThumb" href="<?= $this->baseUrl().'/performer/task/add' ?>" style="height:150px; padding-top: 10px">
               <img src="<?= $this->baseUrl().'/images/category_images/'.$cat['image'] ?>" class="img-rounded " alt="img">
           </a>
-          <a class="subCategoryTitle" data-toggle="modal" data-target="#ModalLogin" >
+          <a class="subCategoryTitle" href="<?= $this->baseUrl().'/performer/task/add' ?>" >
               <span><?= $cat['title'] ?></span>
           </a>
       </div>
@@ -95,14 +95,14 @@ $(document).ready(function(){
           
        <?php foreach($this->lastTasks as $lastTask){?>
         <!--/.item-->
-        <div class="item col-lg-3 col-md-3 col-sm-4 col-xs-6">
+        <div class="item col-lg-3 col-md-3 col-sm-4 col-xs- list-view">
           <div class="product">
          
             <div class="image">  
              <div class="quickview">
               
              </div>
-                <a href="#" data-toggle="modal" data-target="#ModalLogin" >
+                <a href="#"   >
                  <?php if($lastTask['task_image']){?>   
                     <img src="<?= $this->baseUrl().'/images/task_images/'.$lastTask['task_image'] ?>" alt="img" class="img-responsive">
                  <?php }else{ ?>
@@ -112,12 +112,12 @@ $(document).ready(function(){
 <!--              <div class="promotion"> <span class="new-product"> NEW</span> </div>-->
             </div>
             <div class="description">
-              <h4><a href="#" data-toggle="modal" data-target="#ModalLogin" ><?= $lastTask['title'] ?></a></h4>
+              <h4><a href="#"  ><?= $lastTask['title'] ?></a></h4>
               <p><?= $lastTask['description']?> </p>
 <!--              <span class="size">XL / XXL / S </span> -->
             </div>
             <div class="price"> <span><?= $lastTask['price'] ?> .руб</span> </div>
-            <div class="action-control"> <a class="btn btn-primary" data-toggle="modal" data-target="#ModalLogin" > <span class="add2cart"> Подробнее </span> </a> </div>
+            <div class="action-control">  </div>
           </div>
         </div>
        <?php }?>
