--- a/application/modules/performer/views/scripts/performers/performer-view.phtml
+++ b/application/modules/performer/views/scripts/performers/performer-view.phtml
@@ -49,7 +49,7 @@
           <h3 class="product-code">Сферы деятельности :</h3>
           
               <?php foreach($this->usersCategories as $cat){?>
-                <p><?= $cat['c_title'].' '; ?></p>
+                <small><?= $cat['c_title'].' '; ?></small></br>
               <?php } ?>
           
       </div>
@@ -131,13 +131,16 @@
       
     </div>
     <!--/ right column end --> 
-<div class="col-lg-12" style="padding-bottom: 10px">
+    <?php if($this->performer['about']){?>
+    <div class="col-lg-12" style="padding-bottom: 10px">
         <h3 class="block-title-3">
                 Дополнительная информация  
         </h3>
         <p><?= $this->performer['about'] ?></p>
     </div>
+    <?php } ?>
     <!--/ right column end --> 
+    <?php if($this->feedbacks){?>
         <div class="col-lg-12" style="padding-bottom: 10px">
             <h3 class="block-title-3">
                 Отзывы  
@@ -213,6 +216,7 @@
             <?php } ?>
             <?=  $this->paginationControl($this->feedbacks, 'Sliding', 'pagination.phtml') ?>
         </div>
+    <?php } ?>
   </div>
   <!--/.row-->
 
